# hg_cpp

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HG_CPP.todo  README.md  SESSION_BOOTSTRAP.md  THOUGHTS.md  conan_provider.cmake  conandata.yml  conanfile.py  pyproject.toml  test_globalstate.py  test_globalstate_comprehensive.py  test_manual_cycle.py  test_manual_nested.py  test_nested.py  test_nested_simple.py
bindings/python/: CMakeLists.txt  hgraph_module.cpp  module.cpp
bindings/python/hgraph_cpp/: __init__.py  _runtime.py  _types.py
bindings/python/tests/: test_bridge.py  test_hgraph_api.py
python/: CMakeLists.txt  module.cpp  module_internal.h  py_bindings.h  py_carriers.h  py_nodes.cpp  py_ports.cpp  py_runtime.h  py_state_services.cpp  py_type_system.cpp  py_wiring.cpp  py_wiring.h  value_conversion.cpp
python/hgraph/: __init__.py  _compat.py  _feature_switch.py  _frame.py  _runtime.py  _signature.py  _table.py  _types.py  arrow.py  nodes.py  notebook.py  reflection.py
python/hgraph/_operators/: _stream.py
python/hgraph/_runtime/: __init__.py  _global_keys.py  _global_state.py
python/hgraph/_wiring/: __init__.py  _callable_shape.py  _compose.py  _core.py  _graph.py  _lower.py  _markers.py  _node.py  _operator.py  _runner.py  _sentinels.py  _services.py  _state.py
python/hgraph/adaptors/: __init__.py  _async.py  data_frame.py
python/hgraph/adaptors/data_catalogue/: catalogue.py  data_scopes.py  publish.py  subscribe.py
python/hgraph/adaptors/dataclass/: __init__.py  (+1 more)
python/hgraph/arrow/: __init__.py  _arrow.py  _control_flow.py  _pair_operators.py  _std_operators.py  _test_operators.py
python/hgraph/debug/: __init__.py
python/hgraph/numpy_/: __init__.py  _constants.py  _operators.py  _utils.py
python/hgraph/stream/: __init__.py  stream.py
python/hgraph/test/: __init__.py
python/tests/: test_analytical_nodes.py  test_benchmark_harness.py  test_benchmark_scenarios.py  test_bridge.py  test_compat_exports.py  test_compound_scalar_hierarchy.py  test_dispatch_scalar.py  test_distribution_audit.py  test_frame_metadata.py  test_hgraph_api.py  test_inspector.py  test_lifecycle_configuration.py  test_notebook.py  test_numpy_nodes.py  test_packaging.py  test_python_authoring.py  test_python_owned_structured_scalar.py  test_reflection.py  test_release_readiness.py  test_request_id.py  test_signature_compatibility.py  test_temporal_types.py  test_tsd_removal_semantics.py  test_wiring_observers.py
python/tests/numpy_/: test_numpy_operators.py
python/tests/ported/: conftest.py
python/tests/stream/: test_stream.py
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cpp/builders/: graph_builder.cpp  input_builder.cpp  node_builder.cpp  output_builder.cpp
src/cpp/nodes/: base_python_node.cpp  component_node.cpp  context_node.cpp  last_value_pull_node.cpp  map_node.cpp  mesh_node.cpp  nested_evaluation_engine.cpp  nested_graph_node.cpp  nested_node.cpp  non_associative_reduce_node.cpp  push_queue_node.cpp  python_generator_node.cpp  reduce_node.cpp  switch_node.cpp  try_except_node.cpp  tsd_map_node.cpp
src/cpp/python/: _hgraph_builder.cpp  _hgraph_graph.cpp  _hgraph_module.cpp  _hgraph_nodes.cpp  _hgraph_runtime.cpp  _hgraph_types.cpp  _hgraph_utils.cpp  py_hgraph.cpp
src/cpp/runtime/: evaluation_context.cpp  evaluation_engine.cpp  global_state.cpp  graph_executor.cpp  record_replay.cpp
src/cpp/types/: constants.cpp  error_type.cpp  feature_extension.cpp  graph.cpp  node.cpp  ref.cpp  scalar_types.cpp  time_series_type.cpp  traits.cpp  ts.cpp  ts_indexed.cpp  ts_signal.cpp  tsb.cpp  tsd.cpp  tsl.cpp  tss.cpp  tsw.cpp
src/cpp/util/: lifecycle.cpp  stack_trace.cpp  string_util.cpp
src/hgraph/: pch.h  version.cpp
src/hgraph/python/: bridge_state.cpp
src/hgraph/runtime/: context_node.cpp  diagnostic_path.cpp  evaluation_clock.cpp  evaluation_profiler.cpp  evaluation_trace.cpp  executor.cpp  feedback_node.cpp  global_state.cpp  graph.cpp  inspector.cpp  logger.cpp  map_node.cpp  mapped_child_bindings.h  mapped_key_source.h  mesh_node.cpp  nested_graph_node.cpp  node.cpp  node_error.cpp  ordered_reduce_node.cpp  push_source_node.cpp  race_tsd_node.cpp  reduce_node.cpp  reduce_output_binding.h  service_node.cpp  shared_output_node.cpp  switch_node.cpp  try_except_node.cpp  tsl_map_node.cpp
src/hgraph/types/: frame.cpp  graph_wiring.cpp  operator_dispatch.cpp  primitive_types.cpp  record_replay.cpp  registry_reset.cpp  series.cpp  service_runtime.cpp  temporal.cpp  time_series_reference.cpp  time_zone_provider.cpp  type_pattern.cpp  type_pointer.cpp  wiring_observer.cpp
src/hgraph/util/: date_time.cpp
tests/: CMakeLists.txt  __init__.py
tests/cpp/: CMakeLists.txt  header_compile_check.cpp  json_perf.cpp  nested_lifecycle_test_support.h  registry_test_listener.cpp  smoke_test.cpp  test_adaptor_wiring.cpp  test_any_value.cpp  test_bundle_builder.cpp  test_check_output.cpp  test_collection_nodes.cpp  test_compact_storage.cpp  test_component.cpp  test_const_eval.cpp  test_context_node.cpp  test_context_wiring.cpp  test_data_frame_operators.cpp  test_delayed_binding.cpp  test_dispatch.cpp  test_endpoint_owner.cpp  test_engine_control.cpp  test_erased_wiring.cpp  test_error_handling.cpp  test_eval_node.cpp  test_evaluation_profiler.cpp  test_evaluation_trace.cpp  test_feedback.cpp  test_global_state.cpp  test_graph_introspection.cpp  test_graph_wiring.cpp  test_inspector.cpp  test_intern_table.cpp  test_json.cpp  test_lifecycle_observers.cpp  test_logger.cpp  test_lower.cpp  test_map.cpp  test_memory_utils.cpp  test_mesh.cpp  test_mutable_list.cpp  (+51 more)
tests/cpp/abi_boundary/: consumer.cpp  fixture_api.h  producer.cpp
tests/cpp/lift/: test_lift.cpp
tests/debugger/: debugger_fixture.cpp  hgraph_gdb_smoke.py  hgraph_lldb_smoke.py  test_debugger_common.py
tests/install_consumer/: CMakeLists.txt  main.cpp
tests/python/: test_ts_input_python.py  test_value_python.py
tests/python/hgraph_unit_tests/: __init__.py  test_simple_example.py
tests/python_extension_consumer/: CMakeLists.txt  check.py  module.cpp
(+742 files in other folders)
